--- a/frontend/src/pages/KakaoLoginPage.module.css
+++ b/frontend/src/pages/KakaoLoginPage.module.css
@@ -23,6 +23,7 @@
     height: 50vh;
     border: 1px solid rgba(0, 0, 0, .12);
     background-color: white;
+    min-width: 400px;
 
 }
 
@@ -33,9 +34,9 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    margin: 50px 0;           /* 상단과 하단에만 여백 */
-    width: 80%;               /* 화면 너비의 80%로 설정 */
-    max-width: 400px;         /* 최대 너비 설정 */
+    margin: 50px 0;          
+    width: 80%;              
+    max-width: 400px;        
 }
 
 
@@ -54,7 +55,8 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 300px;
+    width: 25vw;
+    min-width: 200px;
 }
 .kakaoButtonText {
     text-align: center;
