feat:[FE] chat, 누구와 가는지 질문

--- a/frontend/src/components/WithWhom.module.css
+++ b/frontend/src/components/WithWhom.module.css
@@ -4,4 +4,16 @@
     border-radius: 99px;
     margin: 50px;
     padding: 50px;
+    align-items: center;
+}
+.buttonStyle{
+    background-color: white;
+    color: #333;
+    border:3px solid #FFA94F;
+    border-radius: 99px;
+    padding: 10px 15px;
+    margin: 10px 0;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    display: inline-flex; /* span 요소의 크기를 내용에 맞춤 */
+    margin-right:10px;
 }
