--- a/frontend/src/pages/ChatPage.css
+++ b/frontend/src/pages/ChatPage.css
@@ -46,3 +46,23 @@
     border-radius: 99px;
     margin: 10px;   
 }
+
+.bubble-container {
+    display: flex;
+    margin-top:auto;
+    flex-grow: 1; /* 높이를 확장하여 차지 */
+    padding: 20px; /* padding을 사용하여 공간 확보 */
+    justify-content: flex-end;
+
+  }
+  
+  .bubble {
+    background-color: #FDE56B;
+    padding: 10px 15px;
+    border-radius: 12px;
+    margin: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+
+  }
