--- a/frontend/src/components/TravelSpot.module.css
+++ b/frontend/src/components/TravelSpot.module.css
@@ -2,12 +2,14 @@
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-bottom: 10px;
+  margin: 0;
+  padding: 10px;
   cursor: pointer;
 }
 
 .spotContainer:hover {
   background-color: #fff7f2;
+  border-radius: 8px;
 }
 
 .image {
@@ -15,12 +17,15 @@
   height: 75px;
   border-radius: 50%;
   object-fit: cover;
+  margin: 0;
 }
 
 .description {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  margin: 0;
+  padding: 0;
 }
 
 .name {
