--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -5,22 +5,19 @@
   --border-radius: 12px;
   --shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
-
 .container {
   display: flex;
   height: 100vh;
   overflow: hidden;
 }
-
 .mainContent {
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   position: relative;
   overflow-y: auto;
 }
-
 .header {
   width: 100%;
   border-bottom: 1px solid #ddd;
@@ -28,84 +25,71 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 40px;
   box-sizing: border-box;
 }
-
 .headerTitle {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-
 .title {
   font-size: 20px;
   margin: 20px 0;
   text-align: left;
 }
-
 .resetButton {
   width: 25px;
   height: 25px;
   cursor: pointer;
   transition: transform 0.2s;
 }
-
 .resetButton:hover {
   transform: scale(1.2);
 }
-
 .profileContainer {
   display: flex;
   align-items: center;
   gap: 10px;
   cursor: pointer;
 }
-
 .profileImage {
   width: 40px;
   height: 40px;
 }
-
 .profileName {
   font-size: 18px;
 }
-
 .chatWindow {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 20px; /* 전체 내부 여백 조정 */
-  overflow-y: auto; /* 세로 스크롤 활성화 */
+  padding: 20px;
+  overflow-y: auto;
   height: calc(100vh - 150px); /* 화면 높이에서 헤더와 입력창 높이를 뺀 크기 */
-  width: 100%; /* 너비를 100%로 설정하여 양쪽 여백 제거 */
+  width: 100%;
   margin: 0; /* 외부 여백 제거 */
-  box-sizing: border-box; /* 패딩 포함 크기 계산 */
+  box-sizing: border-box;
+  position: relative;
 }
-
 /* 스크롤바 스타일 */
 .chatWindow::-webkit-scrollbar {
   width: 10px;
 }
-
 .chatWindow::-webkit-scrollbar-track {
   background: transparent;
 }
-
 .chatWindow::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 8px;
 }
-
 .chatWindow::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
-
 .chatWindow {
   scrollbar-width: thin; /* Firefox 스크롤바 얇게 */
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent; /* Firefox 스크롤 색상 */
 }
-
 .userBubble {
   align-self: flex-end;
   background-color: var(--primary-bg-color);
@@ -117,19 +101,16 @@
   display: inline-block;
   border-top-right-radius: 0;
 }
-
 .userMessageContainer {
   display: flex;
   justify-content: flex-end;
 }
-
 .gptMessageContainer {
   display: flex;
   align-items: center;
   gap: 10px;
   margin: 5px 0;
 }
-
 .gptBubble {
   background-color: var(--secondary-bg-color);
   color: #000;
@@ -139,25 +120,28 @@
   display: inline-block;
   border-top-left-radius: 0;
 }
-
 .gptProfileIcon {
   width: 40px;
   height: 40px;
 }
-
 .chatInputContainer {
   display: flex;
+  box-sizing: border-box;
+  position: absolute;
   align-items: center;
+  justify-content: center;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 0px 20px 20px 20px;
-  width: calc(100% - 400px);
-  position: fixed;
+  width: 100%;
   bottom: 0;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
+  overflow: hidden;
 }
-
 .chatInput {
-  flex: 1;
+  flex: none;
   padding: 15px 20px;
+  width: 85%;
   max-width: 1000px;
   font-size: 16px;
   border: 1px solid #ddd;
@@ -169,18 +153,15 @@
   min-height: 20px;
   overflow-y: auto;
 }
-
 .chatInput.focused {
   border-color: #282828;
 }
-
 .sendIcon {
   margin-left: 10px;
   width: 24px;
   height: 24px;
   cursor: pointer;
 }
-
 .questionStyle {
   display: flex;
   justify-content: space-between;
@@ -188,12 +169,10 @@
   flex-grow: 1;
   padding: 20px;
 }
-
 .calendarStyle {
   display: flex;
   flex-direction: column;
 }
-
 .llmMessage {
   background-color: var(--primary-bg-color);
   color: var(--text-color);
@@ -204,7 +183,6 @@
   display: inline-flex;
   align-self: flex-start;
 }
-
 .clientMessage {
   background-color: var(--primary-bg-color);
   color: var(--text-color);
@@ -214,11 +192,9 @@
   box-shadow: var(--shadow);
   margin-top: auto;
 }
-
 .clientMessage:empty {
   display: none;
 }
-
 .bubbleContainer {
   display: flex;
   margin-top: auto;
@@ -226,7 +202,6 @@
   padding: 20px;
   justify-content: flex-end;
 }
-
 .bubble {
   flex-direction: row-reverse;
   align-self: flex-end;
@@ -238,4 +213,24 @@
   margin: 5px;
   display: inline-block;
   border-top-right-radius: 0;
+}
+.leftButtonContainer {
+  display: flex;
+  justify-content: flex-start;
+  padding: 25px 0 20px 20px;
+}
+.confirmButton {
+  padding: 10px 15px;
+  font-size: 16px;
+  color: #282828;
+  background-color: #fff;
+  border: 3px solid #FFA94F;
+  border-radius: 12px;
+  border-top-left-radius: 0;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+.confirmButton:hover {
+  background-color: #FFA94F;
+  color: #fff;
 }
