feat: [FE] GPT API 연결 로직 구현

--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -247,15 +247,15 @@
   border-top-right-radius: 0;
 }
 
-
 .leftButtonContainer {
   display: flex;
   justify-content: flex-start;
-  padding: 25px 0 20px 20px;
+  padding: 20px 0 20px 20px;
 }
 
 .confirmButton {
   padding: 10px 15px;
+  margin-bottom: 30px;
   font-size: 16px;
   color: #282828;
   background-color: #fff;
@@ -271,3 +271,54 @@
   color: #fff;
 }
 
+.greetingContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.gptProfileIconLarge {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 20px;
+  margin-top: -80px;
+}
+
+.greetingButton {
+  background-color: #ffa94f;
+  color: white;
+  padding: 15px 30px;
+  font-size: 18px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.greetingButton:hover {
+  background-color: #ff9526;
+}
+
+/* 로딩 메세지 점 3개 깜빡이는 애니메이션 */
+.dots {
+  display: inline-block;
+  font-weight: bold;
+  animation: dots 1.5s steps(3, end) infinite;
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
+}
