--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-bg-color: #FDE56B;
-  --secondary-bg-color: #ECECEC;
+  --primary-bg-color: #fde56b;
+  --secondary-bg-color: #ececec;
   --text-color: #333;
   --border-radius: 12px;
   --shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -242,7 +242,7 @@
 .confirm {
   background-color: white;
   color: #333;
-  border: 3px solid #FFA94F;
+  border: 3px solid #ffa94f;
   border-radius: 10px;
   padding: 10px 20px;
   margin: 10px 20px;
@@ -254,13 +254,13 @@
 }
 
 .confirm:hover {
-  background-color: #FFA94F; /* 호버 시 배경색 변경 */
+  background-color: #ffa94f; /* 호버 시 배경색 변경 */
   color: white; /* 호버 시 글자색 변경 */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 호버 시 그림자 강조 */
 }
 
 .confirm:active {
-  background-color: #FF8A00; /* 클릭 시 더 진한 배경색 */
+  background-color: #ff8a00; /* 클릭 시 더 진한 배경색 */
   transform: translateY(0); /* 클릭 시 원래 위치 */
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 줄이기 */
 }
