--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -254,7 +254,7 @@
   padding: 10px 20px;
   margin: 10px 20px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-
+}
 
 .leftButtonContainer {
   display: flex;
@@ -316,6 +316,7 @@
   background-color: #ff8a00; /* 클릭 시 더 진한 배경색 */
   transform: translateY(0); /* 클릭 시 원래 위치 */
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 줄이기 */
+}
 
 .greetingButton:hover {
   background-color: #ff9526;
