--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -280,6 +280,13 @@
   color: #fff;
 }
 
+.confirmButton:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 .greetingContainer {
   display: flex;
   flex-direction: column;
