css: 채팅 인풋 CSS 수정

--- a/frontend/src/pages/NewChat.module.css
+++ b/frontend/src/pages/NewChat.module.css
@@ -164,6 +164,7 @@
 .chatInput {
   flex: none;
   padding: 15px 20px;
+  margin-left: 40px;
   width: 85%;
   max-width: 1000px;
   font-size: 16px;
